...
const renderScene = SceneMap({
  plants: () => <Plants gardenId={null} />,
  gardens: Gardens,
});

const routes = [
  { key: 'plants', title: 'Plantas' },
  { key: 'gardens', title: 'Lugares' },
];

export default function TabTwoScreen() {
  const router = useRouter();
  const layout = useWindowDimensions();
  const [index, setIndex] = React.useState(0);
...
    !isAuthenticated ? (
      <LinearGradient
        colors={['rgba(213, 240, 219, 0.19)', backgroundColor]} // Cambia estos colores a los que quieras
        style={[styles.container, { paddingVertical: 16 }]}
      >
        <View style={styles.titleContainer}>
          <ThemedText type="title">No estás autenticado</ThemedText>
          <ThemedText type="default">Por favor, inicia sesión para ver tus plantas y jardines.</ThemedText>
          <Button text="Iniciar sesión" onPress={handleLogin} />
          <View style={{ marginTop: 16 }}>
            <ThemedText type="default">¿No tienes cuenta?</ThemedText>
            <Button text="Crea una" onPress={handleSignup} />
          </View>

        </View>
      </LinearGradient>
    ) : (

      <LinearGradient
        colors={['rgba(213, 240, 219, 0.19)', backgroundColor]} // Cambia estos colores a los que quieras
        style={[styles.container, { paddingVertical: 16 }]}
      >
        <View style={styles.titleContainer}>
          <View style={{ flexDirection: 'row', justifyContent: 'space-between', alignContent: 'center', gap: 8 }}>
            <ThemedText type="title">Mis plantas</ThemedText>
            <TouchableOpacity
              testID='settings'
              style={{ paddingVertical: 8 }}
              onPress={(event) => {
                router.push({
                  pathname: "/settings"
...
