...
            >
                <TouchableOpacity
                    style={styles.deleteButtonInner}
                    onPress={() => handleSwipeDelete(plantId)}
                >
                    <Ionicons name="trash" size={24} color="white" />
                    <Text style={styles.deleteButtonText}>Eliminar</Text>
                </TouchableOpacity>
            </Animated.View>
        );
    };


...
    return (
        <>
            {!plantId && (
                <>
                    {gardens.length === 0 && (
                        <View style={{ paddingHorizontal: 16 }}>
                            <ThemedText type="default">No hay lugares aquí aún. ¡Añade un nuevo lugar y agrupa tus plantas!</ThemedText>
                            <ThemedText type="subtitle">Crea espacios personalizados para agrupar tus plantas y gestionar sus cuidados por zonas</ThemedText>
                        </View>
                    )}
                    <GestureHandlerRootView style={{ flex: 1 }}>
                        <ScrollView style={styles.container}
                            refreshControl={
...
                                            </ThemedView>
                                        </TouchableOpacity>
                                    </Swipeable>
                                );
                            })}
                            {!plantId && (
                                <Button text="Añadir lugar" onPress={handleAdd} />
                            )}
                            <View style={{ marginBottom: 24 }} />
                        </ScrollView>
                    </GestureHandlerRootView>
                </>
            )}
...
