...

    setIsSubmitting(true);
    try {
      if (edit && commentId) {
        const updated = await PostService.updateComment(Number(commentId), { content }, accessToken!);
        if (updated) {
          Alert.alert("Éxito", "Comentario actualizado", [{ text: "Aceptar", onPress: () => router.replace({ pathname: "/post-details", params: { id: postId } }) }]);
        } else {
          Alert.alert("Error", "No se pudo actualizar el comentario. Intenta de nuevo.");
        }
      } else {
        const comment: Comment = {
          content: content,
...
              <Ionicons
                name={isSubmitting ? "hourglass" : "checkmark"}
                size={20}
                color="#333"
              />
              <Text style={styles.submitButtonText}>
                {isSubmitting ? "Creando..." : (edit ? "Actualizar" : "Crear")}
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </ScrollView>
    </ThemedView>
...
